tests/expected_invalid_construct_private_field.diag.out
<input>:10:9: error: cannot construct here: field 'detail' is private
            outer::Resource { value: 1, detail: 2 }
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
